--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,7 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -26,6 +26,7 @@
   user-select: none;
   transform: rotate(90deg);
   margin: 0 10px 0 0;
+  cursor: pointer;
 }
 
 .chatHead p:first-child {
@@ -55,6 +56,7 @@
 
 .threeDots {
   user-select: none;
+  cursor: pointer;
 }
 
 
